# Trading_algo

./: .gitignore  README.md  analyze_btc.py  analyze_monthly_winrate.py  analyze_win_rate.py  best_strategy_backtest.py  bot_state.json  buffer_research.py  close_above_research.py  dashboard.py  deep_research.py  elite_analysis.py  ema_research.py  fetch_ticks.py  final_backtest.py  fractal_logic.py  fvg_research.py  fvg_retrace_research.py  gold_comparison.py  live_execution.py  live_execution_fractal.py  live_execution_pre.py  momentum_research.py  optimize_btc.py  pdarray_research.py  prepare.py  professional_analysis.py  program.md  pyproject.toml  target_research.py  test_trade.py  time_research.py  trailing_research.py  train.py  visual_report.py
